--- a/UI/HtmlUIWeb/Views/Proces/Index.cshtml
+++ b/UI/HtmlUIWeb/Views/Proces/Index.cshtml
@@ -3,9 +3,9 @@
     Layout = "../Shared/_Layout.cshtml";
 }
 @using Kendo.Mvc.UI
-@using NeuroSystem.Workflow.UserData.UI.Html.ASP.UI.Html.Mvc.Extensions
+@using NeuroSystem.Workflow.UserData.UI.Html.Mvc.Extensions
 
-@model NeuroSystem.Workflow.UserData.UI.Html.ASP.UI.Html.Mvc.TestViews.ProcesMW
+@model NeuroSystem.Workflow.UserData.UI.Html.Mvc.TestViews.ProcesMW
 
 <div >
     <h2>Proces22</h2>
